// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exchange Results EXPIRED renders correctly 1`] = `
<Modal
  size="small"
>
  <ExchangeResults__Header />
  <ModalBody
    loading={false}
  >
    <ExchangeResults__CoinIconTitle>
      <Icon
        color="btc"
        cursor={false}
        name="btc-circle-filled"
        size="42px"
        weight={400}
      />
      <Icon
        color="gray-5"
        cursor={false}
        name="arrow-right"
        size="12px"
        weight={400}
      />
      <Icon
        color="eth"
        cursor={false}
        name="eth-circle-filled"
        size="42px"
        weight={400}
      />
    </ExchangeResults__CoinIconTitle>
    <ExchangeResults__SummaryNote>
      <OrderNote
        status="EXPIRED"
      />
    </ExchangeResults__SummaryNote>
    <ExchangeResults__OrderRow>
      <Text
        altFont={false}
        capitalize={false}
        color="gray-5"
        cursor="inherit"
        italic={false}
        lineHeight="inherit"
        opacity={1}
        size="16px"
        uppercase={false}
        weight={600}
      >
        <FormattedMessage
          defaultMessage="Order ID"
          id="modals.exchangeresults.orderid"
          values={Object {}}
        />
      </Text>
      ede39566-1f0d-4e48-96fa-b558b70e46b7
    </ExchangeResults__OrderRow>
    <ExchangeResults__SummaryWrapper>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Status"
            id="modals.exchangeresults.status"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <ExchangeResults__SummaryExchangeAmount
          color="gray-5"
        >
          <ExchangeResults__StatusCircle
            color="error"
            marginRight="4px"
          />
          <OrderStatus
            status="EXPIRED"
          />
        </ExchangeResults__SummaryExchangeAmount>
      </Exchange__LargeTableRow>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Exchange"
            id="modals.exchangeresults.exchangecoin"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeAmounts>
          <ExchangeResults__SummaryExchangeAmount
            color="gray-5"
            data-e2e="exchangeResultsSourceValue"
          >
            0.008022 BTC
          </ExchangeResults__SummaryExchangeAmount>
        </Exchange__ExchangeAmounts>
      </Exchange__LargeTableRow>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Receive"
            id="modals.exchangeresults.receivecoin"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeAmounts>
          <ExchangeResults__SummaryExchangeAmount
            color="gray-5"
            data-e2e="exchangeResultsTargetValue"
          >
            <ExchangeResults__StrikeThrough>
              0.1337 ETH
            </ExchangeResults__StrikeThrough>
          </ExchangeResults__SummaryExchangeAmount>
        </Exchange__ExchangeAmounts>
      </Exchange__LargeTableRow>
    </ExchangeResults__SummaryWrapper>
    <Link
      bold={false}
      capitalize={false}
      color="brand-secondary"
      href="https://support.blockchain.com/hc/en-us/requests/new?ticket_form_id=360000180551"
      size="16px"
      target="_blank"
      uppercase={false}
      weight={500}
    >
      <Button
        bold={false}
        capitalize={false}
        disabled={false}
        fullwidth={true}
        height="56px"
        nature="primary"
        rounded={false}
        size="14px"
        small={false}
        uppercase={false}
        weight={400}
      >
        <FormattedMessage
          defaultMessage="Contact Support"
          id="modals.exchangedetails.support"
          values={Object {}}
        />
      </Button>
    </Link>
  </ModalBody>
</Modal>
`;

exports[`Exchange Results FAILED renders correctly 1`] = `
<Modal
  size="small"
>
  <ExchangeResults__Header />
  <ModalBody
    loading={false}
  >
    <ExchangeResults__CoinIconTitle>
      <Icon
        color="btc"
        cursor={false}
        name="btc-circle-filled"
        size="42px"
        weight={400}
      />
      <Icon
        color="gray-5"
        cursor={false}
        name="arrow-right"
        size="12px"
        weight={400}
      />
      <Icon
        color="eth"
        cursor={false}
        name="eth-circle-filled"
        size="42px"
        weight={400}
      />
    </ExchangeResults__CoinIconTitle>
    <ExchangeResults__SummaryNote>
      <OrderNote
        status="FAILED"
      />
    </ExchangeResults__SummaryNote>
    <ExchangeResults__OrderRow>
      <Text
        altFont={false}
        capitalize={false}
        color="gray-5"
        cursor="inherit"
        italic={false}
        lineHeight="inherit"
        opacity={1}
        size="16px"
        uppercase={false}
        weight={600}
      >
        <FormattedMessage
          defaultMessage="Order ID"
          id="modals.exchangeresults.orderid"
          values={Object {}}
        />
      </Text>
      ede39566-1f0d-4e48-96fa-b558b70e46b7
    </ExchangeResults__OrderRow>
    <ExchangeResults__SummaryWrapper>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Status"
            id="modals.exchangeresults.status"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <ExchangeResults__SummaryExchangeAmount
          color="gray-5"
        >
          <ExchangeResults__StatusCircle
            color="error"
            marginRight="4px"
          />
          <OrderStatus
            status="FAILED"
          />
        </ExchangeResults__SummaryExchangeAmount>
      </Exchange__LargeTableRow>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Exchange"
            id="modals.exchangeresults.exchangecoin"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeAmounts>
          <ExchangeResults__SummaryExchangeAmount
            color="gray-5"
            data-e2e="exchangeResultsSourceValue"
          >
            0.008022 BTC
          </ExchangeResults__SummaryExchangeAmount>
        </Exchange__ExchangeAmounts>
      </Exchange__LargeTableRow>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Receive"
            id="modals.exchangeresults.receivecoin"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeAmounts>
          <ExchangeResults__SummaryExchangeAmount
            color="gray-5"
            data-e2e="exchangeResultsTargetValue"
          >
            <ExchangeResults__StrikeThrough>
              0.1337 ETH
            </ExchangeResults__StrikeThrough>
          </ExchangeResults__SummaryExchangeAmount>
        </Exchange__ExchangeAmounts>
      </Exchange__LargeTableRow>
    </ExchangeResults__SummaryWrapper>
    <Link
      bold={false}
      capitalize={false}
      color="brand-secondary"
      href="https://support.blockchain.com/hc/en-us/requests/new?ticket_form_id=360000180551"
      size="16px"
      target="_blank"
      uppercase={false}
      weight={500}
    >
      <Button
        bold={false}
        capitalize={false}
        disabled={false}
        fullwidth={true}
        height="56px"
        nature="primary"
        rounded={false}
        size="14px"
        small={false}
        uppercase={false}
        weight={400}
      >
        <FormattedMessage
          defaultMessage="Contact Support"
          id="modals.exchangedetails.support"
          values={Object {}}
        />
      </Button>
    </Link>
  </ModalBody>
</Modal>
`;

exports[`Exchange Results FINISHED renders correctly 1`] = `
<Modal
  size="small"
>
  <ExchangeResults__Header />
  <ModalBody
    loading={false}
  >
    <ExchangeResults__CoinIconTitle>
      <Icon
        color="btc"
        cursor={false}
        name="btc-circle-filled"
        size="42px"
        weight={400}
      />
      <Icon
        color="gray-5"
        cursor={false}
        name="arrow-right"
        size="12px"
        weight={400}
      />
      <Icon
        color="eth"
        cursor={false}
        name="eth-circle-filled"
        size="42px"
        weight={400}
      />
    </ExchangeResults__CoinIconTitle>
    <ExchangeResults__OrderRow>
      <Text
        altFont={false}
        capitalize={false}
        color="gray-5"
        cursor="inherit"
        italic={false}
        lineHeight="inherit"
        opacity={1}
        size="16px"
        uppercase={false}
        weight={600}
      >
        <FormattedMessage
          defaultMessage="Order ID"
          id="modals.exchangeresults.orderid"
          values={Object {}}
        />
      </Text>
      ede39566-1f0d-4e48-96fa-b558b70e46b7
    </ExchangeResults__OrderRow>
    <ExchangeResults__SummaryWrapper>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Status"
            id="modals.exchangeresults.status"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <ExchangeResults__SummaryExchangeAmount
          color="gray-5"
        >
          <ExchangeResults__StatusCircle
            color="success"
            marginRight="4px"
          />
          <OrderStatus
            status="FINISHED"
          />
        </ExchangeResults__SummaryExchangeAmount>
      </Exchange__LargeTableRow>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Deposited"
            id="modals.exchangeresults.depositedcoin"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeAmounts>
          <ExchangeResults__SummaryExchangeAmount
            color="gray-5"
            data-e2e="exchangeResultsSourceValue"
          >
            0.008022 BTC
          </ExchangeResults__SummaryExchangeAmount>
        </Exchange__ExchangeAmounts>
      </Exchange__LargeTableRow>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Received"
            id="modals.exchangeresults.coinreceived"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeAmounts>
          <ExchangeResults__SummaryExchangeAmount
            color="gray-5"
            data-e2e="exchangeResultsTargetValue"
          >
            0.1337 ETH
          </ExchangeResults__SummaryExchangeAmount>
        </Exchange__ExchangeAmounts>
      </Exchange__LargeTableRow>
      <ExchangeResults__MidTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Total Value"
            id="modals.exchangeresults.value"
            values={Object {}}
          />
           
          <FormattedMessage
            defaultMessage="(when exchanged)"
            id="modals.exchangeresults.valuenotcie"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeText
          weight={400}
        >
           1000 USD
        </Exchange__ExchangeText>
      </ExchangeResults__MidTableRow>
      <ExchangeResults__MidTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Exchange rate"
            id="modals.exchangeresults.rate"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeText
          weight={400}
        >
          1 BTC = 0.06 ETH
        </Exchange__ExchangeText>
      </ExchangeResults__MidTableRow>
    </ExchangeResults__SummaryWrapper>
  </ModalBody>
</Modal>
`;

exports[`Exchange Results PENDING_DEPOSIT renders correctly 1`] = `
<Modal
  size="small"
>
  <ExchangeResults__Header />
  <ModalBody
    loading={false}
  >
    <ExchangeResults__CoinIconTitle>
      <Icon
        color="btc"
        cursor={false}
        name="btc-circle-filled"
        size="42px"
        weight={400}
      />
      <Icon
        color="gray-5"
        cursor={false}
        name="arrow-right"
        size="12px"
        weight={400}
      />
      <Icon
        color="eth"
        cursor={false}
        name="eth-circle-filled"
        size="42px"
        weight={400}
      />
    </ExchangeResults__CoinIconTitle>
    <ExchangeResults__SummaryNote>
      <OrderNote
        status="PENDING_DEPOSIT"
      />
    </ExchangeResults__SummaryNote>
    <ExchangeResults__OrderRow>
      <Text
        altFont={false}
        capitalize={false}
        color="gray-5"
        cursor="inherit"
        italic={false}
        lineHeight="inherit"
        opacity={1}
        size="16px"
        uppercase={false}
        weight={600}
      >
        <FormattedMessage
          defaultMessage="Order ID"
          id="modals.exchangeresults.orderid"
          values={Object {}}
        />
      </Text>
      ede39566-1f0d-4e48-96fa-b558b70e46b7
    </ExchangeResults__OrderRow>
    <ExchangeResults__SummaryWrapper>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Status"
            id="modals.exchangeresults.status"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <ExchangeResults__SummaryExchangeAmount
          color="gray-5"
        >
          <ExchangeResults__StatusCircle
            color="brand-yellow"
            marginRight="4px"
          />
          <OrderStatus
            status="PENDING_DEPOSIT"
          />
        </ExchangeResults__SummaryExchangeAmount>
      </Exchange__LargeTableRow>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Exchange"
            id="modals.exchangeresults.exchangecoin"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeAmounts>
          <ExchangeResults__SummaryExchangeAmount
            color="gray-5"
            data-e2e="exchangeResultsSourceValue"
          >
            0.008022 BTC
          </ExchangeResults__SummaryExchangeAmount>
        </Exchange__ExchangeAmounts>
      </Exchange__LargeTableRow>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Receive"
            id="modals.exchangeresults.receivecoin"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeAmounts>
          <ExchangeResults__SummaryExchangeAmount
            color="gray-5"
            data-e2e="exchangeResultsTargetValue"
          >
            0.1337 ETH
          </ExchangeResults__SummaryExchangeAmount>
        </Exchange__ExchangeAmounts>
      </Exchange__LargeTableRow>
      <ExchangeResults__MidTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Total Value"
            id="modals.exchangeresults.value"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeText
          weight={400}
        >
          ~ 1000 USD
        </Exchange__ExchangeText>
      </ExchangeResults__MidTableRow>
      <ExchangeResults__MidTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Exchange rate"
            id="modals.exchangeresults.rate"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeText
          weight={400}
        >
          1 BTC = 0.06 ETH
        </Exchange__ExchangeText>
      </ExchangeResults__MidTableRow>
    </ExchangeResults__SummaryWrapper>
  </ModalBody>
</Modal>
`;

exports[`Exchange Results PENDING_EXECUTION renders correctly 1`] = `
<Modal
  size="small"
>
  <ExchangeResults__Header />
  <ModalBody
    loading={false}
  >
    <ExchangeResults__CoinIconTitle>
      <Icon
        color="btc"
        cursor={false}
        name="btc-circle-filled"
        size="42px"
        weight={400}
      />
      <Icon
        color="gray-5"
        cursor={false}
        name="arrow-right"
        size="12px"
        weight={400}
      />
      <Icon
        color="eth"
        cursor={false}
        name="eth-circle-filled"
        size="42px"
        weight={400}
      />
    </ExchangeResults__CoinIconTitle>
    <ExchangeResults__SummaryNote>
      <OrderNote
        status="PENDING_EXECUTION"
      />
    </ExchangeResults__SummaryNote>
    <ExchangeResults__OrderRow>
      <Text
        altFont={false}
        capitalize={false}
        color="gray-5"
        cursor="inherit"
        italic={false}
        lineHeight="inherit"
        opacity={1}
        size="16px"
        uppercase={false}
        weight={600}
      >
        <FormattedMessage
          defaultMessage="Order ID"
          id="modals.exchangeresults.orderid"
          values={Object {}}
        />
      </Text>
      ede39566-1f0d-4e48-96fa-b558b70e46b7
    </ExchangeResults__OrderRow>
    <ExchangeResults__SummaryWrapper>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Status"
            id="modals.exchangeresults.status"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <ExchangeResults__SummaryExchangeAmount
          color="gray-5"
        >
          <ExchangeResults__StatusCircle
            color="brand-yellow"
            marginRight="4px"
          />
          <OrderStatus
            status="PENDING_EXECUTION"
          />
        </ExchangeResults__SummaryExchangeAmount>
      </Exchange__LargeTableRow>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Exchange"
            id="modals.exchangeresults.exchangecoin"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeAmounts>
          <ExchangeResults__SummaryExchangeAmount
            color="gray-5"
            data-e2e="exchangeResultsSourceValue"
          >
            0.008022 BTC
          </ExchangeResults__SummaryExchangeAmount>
        </Exchange__ExchangeAmounts>
      </Exchange__LargeTableRow>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Receive"
            id="modals.exchangeresults.receivecoin"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeAmounts>
          <ExchangeResults__SummaryExchangeAmount
            color="gray-5"
            data-e2e="exchangeResultsTargetValue"
          >
            0.1337 ETH
          </ExchangeResults__SummaryExchangeAmount>
        </Exchange__ExchangeAmounts>
      </Exchange__LargeTableRow>
      <ExchangeResults__MidTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Total Value"
            id="modals.exchangeresults.value"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeText
          weight={400}
        >
          ~ 1000 USD
        </Exchange__ExchangeText>
      </ExchangeResults__MidTableRow>
      <ExchangeResults__MidTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Exchange rate"
            id="modals.exchangeresults.rate"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeText
          weight={400}
        >
          1 BTC = 0.06 ETH
        </Exchange__ExchangeText>
      </ExchangeResults__MidTableRow>
    </ExchangeResults__SummaryWrapper>
  </ModalBody>
</Modal>
`;

exports[`Exchange Results PENDING_REFUND renders correctly 1`] = `
<Modal
  size="small"
>
  <ExchangeResults__Header />
  <ModalBody
    loading={false}
  >
    <ExchangeResults__CoinIconTitle>
      <Icon
        color="btc"
        cursor={false}
        name="btc-circle-filled"
        size="42px"
        weight={400}
      />
      <Icon
        color="gray-5"
        cursor={false}
        name="arrow-right"
        size="12px"
        weight={400}
      />
      <Icon
        color="eth"
        cursor={false}
        name="eth-circle-filled"
        size="42px"
        weight={400}
      />
    </ExchangeResults__CoinIconTitle>
    <ExchangeResults__SummaryNote>
      <OrderNote
        status="PENDING_REFUND"
      />
    </ExchangeResults__SummaryNote>
    <ExchangeResults__OrderRow>
      <Text
        altFont={false}
        capitalize={false}
        color="gray-5"
        cursor="inherit"
        italic={false}
        lineHeight="inherit"
        opacity={1}
        size="16px"
        uppercase={false}
        weight={600}
      >
        <FormattedMessage
          defaultMessage="Order ID"
          id="modals.exchangeresults.orderid"
          values={Object {}}
        />
      </Text>
      ede39566-1f0d-4e48-96fa-b558b70e46b7
    </ExchangeResults__OrderRow>
    <ExchangeResults__SummaryWrapper>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Status"
            id="modals.exchangeresults.status"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <ExchangeResults__SummaryExchangeAmount
          color="gray-5"
        >
          <ExchangeResults__StatusCircle
            color="brand-yellow"
            marginRight="4px"
          />
          <OrderStatus
            status="PENDING_REFUND"
          />
        </ExchangeResults__SummaryExchangeAmount>
      </Exchange__LargeTableRow>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Broadcast"
            id="modals.exchangeresults.broadcastcoin"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeAmounts>
          <ExchangeResults__SummaryExchangeAmount
            color="gray-5"
            data-e2e="exchangeResultsSourceValue"
          >
            0.008022 BTC
          </ExchangeResults__SummaryExchangeAmount>
        </Exchange__ExchangeAmounts>
      </Exchange__LargeTableRow>
      <ExchangeResults__MidTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Total to be refunded"
            id="modals.exchangeresults.totaltoberefunded"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeText
          weight={400}
        >
          ~ 0.1336
        </Exchange__ExchangeText>
      </ExchangeResults__MidTableRow>
    </ExchangeResults__SummaryWrapper>
  </ModalBody>
</Modal>
`;

exports[`Exchange Results PENDING_WITHDRAWAL renders correctly 1`] = `
<Modal
  size="small"
>
  <ExchangeResults__Header />
  <ModalBody
    loading={false}
  >
    <ExchangeResults__CoinIconTitle>
      <Icon
        color="btc"
        cursor={false}
        name="btc-circle-filled"
        size="42px"
        weight={400}
      />
      <Icon
        color="gray-5"
        cursor={false}
        name="arrow-right"
        size="12px"
        weight={400}
      />
      <Icon
        color="eth"
        cursor={false}
        name="eth-circle-filled"
        size="42px"
        weight={400}
      />
    </ExchangeResults__CoinIconTitle>
    <ExchangeResults__SummaryNote>
      <OrderNote
        status="PENDING_WITHDRAWAL"
      />
    </ExchangeResults__SummaryNote>
    <ExchangeResults__OrderRow>
      <Text
        altFont={false}
        capitalize={false}
        color="gray-5"
        cursor="inherit"
        italic={false}
        lineHeight="inherit"
        opacity={1}
        size="16px"
        uppercase={false}
        weight={600}
      >
        <FormattedMessage
          defaultMessage="Order ID"
          id="modals.exchangeresults.orderid"
          values={Object {}}
        />
      </Text>
      ede39566-1f0d-4e48-96fa-b558b70e46b7
    </ExchangeResults__OrderRow>
    <ExchangeResults__SummaryWrapper>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Status"
            id="modals.exchangeresults.status"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <ExchangeResults__SummaryExchangeAmount
          color="gray-5"
        >
          <ExchangeResults__StatusCircle
            color="brand-yellow"
            marginRight="4px"
          />
          <OrderStatus
            status="PENDING_WITHDRAWAL"
          />
        </ExchangeResults__SummaryExchangeAmount>
      </Exchange__LargeTableRow>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Exchange"
            id="modals.exchangeresults.exchangecoin"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeAmounts>
          <ExchangeResults__SummaryExchangeAmount
            color="gray-5"
            data-e2e="exchangeResultsSourceValue"
          >
            0.008022 BTC
          </ExchangeResults__SummaryExchangeAmount>
        </Exchange__ExchangeAmounts>
      </Exchange__LargeTableRow>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Receive"
            id="modals.exchangeresults.receivecoin"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeAmounts>
          <ExchangeResults__SummaryExchangeAmount
            color="gray-5"
            data-e2e="exchangeResultsTargetValue"
          >
            0.1337 ETH
          </ExchangeResults__SummaryExchangeAmount>
        </Exchange__ExchangeAmounts>
      </Exchange__LargeTableRow>
      <ExchangeResults__MidTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Total Value"
            id="modals.exchangeresults.value"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeText
          weight={400}
        >
          ~ 1000 USD
        </Exchange__ExchangeText>
      </ExchangeResults__MidTableRow>
      <ExchangeResults__MidTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Exchange rate"
            id="modals.exchangeresults.rate"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeText
          weight={400}
        >
          1 BTC = 0.06 ETH
        </Exchange__ExchangeText>
      </ExchangeResults__MidTableRow>
    </ExchangeResults__SummaryWrapper>
  </ModalBody>
</Modal>
`;

exports[`Exchange Results REFUNDED renders correctly 1`] = `
<Modal
  size="small"
>
  <ExchangeResults__Header />
  <ModalBody
    loading={false}
  >
    <ExchangeResults__CoinIconTitle>
      <Icon
        color="btc"
        cursor={false}
        name="btc-circle-filled"
        size="42px"
        weight={400}
      />
      <Icon
        color="gray-5"
        cursor={false}
        name="arrow-right"
        size="12px"
        weight={400}
      />
      <Icon
        color="eth"
        cursor={false}
        name="eth-circle-filled"
        size="42px"
        weight={400}
      />
    </ExchangeResults__CoinIconTitle>
    <ExchangeResults__SummaryNote>
      <OrderNote
        status="REFUNDED"
      />
    </ExchangeResults__SummaryNote>
    <ExchangeResults__OrderRow>
      <Text
        altFont={false}
        capitalize={false}
        color="gray-5"
        cursor="inherit"
        italic={false}
        lineHeight="inherit"
        opacity={1}
        size="16px"
        uppercase={false}
        weight={600}
      >
        <FormattedMessage
          defaultMessage="Order ID"
          id="modals.exchangeresults.orderid"
          values={Object {}}
        />
      </Text>
      ede39566-1f0d-4e48-96fa-b558b70e46b7
    </ExchangeResults__OrderRow>
    <ExchangeResults__SummaryWrapper>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Status"
            id="modals.exchangeresults.status"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <ExchangeResults__SummaryExchangeAmount
          color="gray-5"
        >
          <ExchangeResults__StatusCircle
            color="brand-yellow"
            marginRight="4px"
          />
          <OrderStatus
            status="REFUNDED"
          />
        </ExchangeResults__SummaryExchangeAmount>
      </Exchange__LargeTableRow>
      <Exchange__LargeTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Broadcast"
            id="modals.exchangeresults.broadcastcoin"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeAmounts>
          <ExchangeResults__SummaryExchangeAmount
            color="gray-5"
            data-e2e="exchangeResultsSourceValue"
          >
            0.008022 BTC
          </ExchangeResults__SummaryExchangeAmount>
        </Exchange__ExchangeAmounts>
      </Exchange__LargeTableRow>
      <ExchangeResults__MidTableRow>
        <Exchange__ExchangeText>
          <FormattedMessage
            defaultMessage="Total refunded"
            id="modals.exchangeresults.totalrefunded"
            values={Object {}}
          />
        </Exchange__ExchangeText>
        <Exchange__ExchangeText
          weight={400}
        >
           0.1336
        </Exchange__ExchangeText>
      </ExchangeResults__MidTableRow>
    </ExchangeResults__SummaryWrapper>
  </ModalBody>
</Modal>
`;
